--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="fluid-container service-list">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-6">
           <div class="card col">
-            <img src="C:\Users\NAVIN KUMAR\OneDrive\Desktop\website internship assignment\assets\image1.png"
+            <img src="assets/image1.png"
               alt="service1 image" width="150px" height="150px">
             <div class="card-body">
               <h5 class="card-title">Service 1</h5>
@@ -57,7 +57,7 @@
           </div>
 
           <div class="card col">
-            <img src="C:\Users\NAVIN KUMAR\OneDrive\Desktop\website internship assignment\assets\image2.jpg"
+            <img src="assets/image2.jpg"
               alt="service2 image" width="150px" height="150px">
             <div class="card-body">
               <h5 class="card-title">Service 2</h5>
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="card col">
-            <img src="C:\Users\NAVIN KUMAR\OneDrive\Desktop\website internship assignment\assets\image3.jpg"
+            <img src="assets/image3.jpg"
               alt="Card image" width="150px" height="150px">
             <div class="card-body">
               <h5 class="card-title">Service 3</h5>
